style(inschrijven): Fix bug where the list is partially cut off
This only happens with certain screen sizes

--- a/src/styles/Videos.css
+++ b/src/styles/Videos.css
@@ -32,7 +32,6 @@
 
 .takkenButtons {
   display: block;
-  height: 400px;
 }
 
 .videosLink {
